// This is file was generated by netdx on (2017-11-24 12:33:53 PM.
syntax = "proto3";
package Ndx.Decoders.Base;
message Llc {
    // DSAP ('llc_llc_dsap')
     uint32 LlcDsap = 1;

    // SAP ('llc_dsap_llc_dsap_sap')
     uint32 LlcDsapSap = 2;

    // IG Bit ('llc_dsap_llc_dsap_ig')
     bool LlcDsapIg = 3;

    // SSAP ('llc_llc_ssap')
     uint32 LlcSsap = 4;

    // SAP ('llc_ssap_llc_ssap_sap')
     uint32 LlcSsapSap = 5;

    // CR Bit ('llc_ssap_llc_ssap_cr')
     bool LlcSsapCr = 6;

    // Control ('llc_llc_control')
     uint32 LlcControl = 7;

    // N(R) ('llc_control_llc_control_n_r')
     uint32 LlcControlNR = 8;

    // N(S) ('llc_control_llc_control_n_s')
     uint32 LlcControlNS = 9;

    // Poll ('llc_control_llc_control_p')
     bool LlcControlP = 10;

    // Final ('llc_control_llc_control_f')
     bool LlcControlF = 11;

    // Supervisory frame type ('llc_control_llc_control_s_ftype')
     uint32 LlcControlSFtype = 12;

    // Command ('llc_control_llc_control_u_modifier_cmd')
     uint32 LlcControlUModifierCmd = 13;

    // Response ('llc_control_llc_control_u_modifier_resp')
     uint32 LlcControlUModifierResp = 14;

    // Frame type ('llc_control_llc_control_ftype')
     uint32 LlcControlFtype = 15;

    // Type ('llc_llc_type')
     uint32 LlcType = 16;

    // Organization Code ('llc_llc_oui')
     uint32 LlcOui = 17;

    // Protocol ID ('llc_llc_pid')
     uint32 LlcPid = 18;

}
